--- a/QLGR/QLGR.csproj
+++ b/QLGR/QLGR.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -46,49 +47,70 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BUS\ThuTienBUS.cs" />
     <Compile Include="DAO\DataProvider.cs" />
     <Compile Include="DAO\SuaChuaDAO.cs" />
-    <Compile Include="LapPhieuSuaChua.cs">
+    <Compile Include="DAO\ThuTienDAO.cs" />
+    <Compile Include="DTO\ThuTienDTO.cs" />
+    <Compile Include="GUI\LapPhieuSuaChua.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LapPhieuSuaChua.Designer.cs">
+    <Compile Include="GUI\LapPhieuSuaChua.Designer.cs">
       <DependentUpon>LapPhieuSuaChua.cs</DependentUpon>
     </Compile>
     <Compile Include="DAO\AccountDAO.cs" />
-    <Compile Include="LoginMenu.cs">
+    <Compile Include="GUI\LapPhieuThuTien.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LoginMenu.Designer.cs">
+    <Compile Include="GUI\LapPhieuThuTien.Designer.cs">
+      <DependentUpon>LapPhieuThuTien.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\LoginMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\LoginMenu.Designer.cs">
       <DependentUpon>LoginMenu.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainMenu.cs">
+    <Compile Include="GUI\MainMenu.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainMenu.Designer.cs">
+    <Compile Include="GUI\MainMenu.Designer.cs">
       <DependentUpon>MainMenu.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="GUI\PhieuTiepNhanXeSua.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\PhieuTiepNhanXeSua.Designer.cs">
+      <DependentUpon>PhieuTiepNhanXeSua.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QuanLyGaraDataSet.Designer.cs">
+    <Compile Include="GUI\QuanLyGaraDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>QuanLyGaraDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="DTO\SuaChua.cs" />
-    <Compile Include="ThongTinNguoiDung.cs">
+    <Compile Include="GUI\ThongTinNguoiDung.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ThongTinNguoiDung.Designer.cs">
+    <Compile Include="GUI\ThongTinNguoiDung.Designer.cs">
       <DependentUpon>ThongTinNguoiDung.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="LapPhieuSuaChua.resx">
+    <EmbeddedResource Include="GUI\LapPhieuSuaChua.resx">
       <DependentUpon>LapPhieuSuaChua.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LoginMenu.resx">
+    <EmbeddedResource Include="GUI\LapPhieuThuTien.resx">
+      <DependentUpon>LapPhieuThuTien.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\LoginMenu.resx">
       <DependentUpon>LoginMenu.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainMenu.resx">
+    <EmbeddedResource Include="GUI\MainMenu.resx">
       <DependentUpon>MainMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\PhieuTiepNhanXeSua.resx">
+      <DependentUpon>PhieuTiepNhanXeSua.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -99,7 +121,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ThongTinNguoiDung.resx">
+    <EmbeddedResource Include="GUI\ThongTinNguoiDung.resx">
       <DependentUpon>ThongTinNguoiDung.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
@@ -111,20 +133,20 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="QuanLyGaraDataSet.xsc">
+    <None Include="GUI\QuanLyGaraDataSet.xsc">
       <DependentUpon>QuanLyGaraDataSet.xsd</DependentUpon>
     </None>
-    <None Include="QuanLyGaraDataSet.xsd">
+    <None Include="GUI\QuanLyGaraDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>QuanLyGaraDataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="QuanLyGaraDataSet.xss">
+    <None Include="GUI\QuanLyGaraDataSet.xss">
       <DependentUpon>QuanLyGaraDataSet.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="GUI\App.config" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
