--- a/Test/ClassLibrary1/BUS.csproj
+++ b/Test/ClassLibrary1/BUS.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThuTienBUS.cs" />
+    <Compile Include="TiepNhanBUS.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAO\DAO.csproj">
