--- a/Test/DAO/DAO.csproj
+++ b/Test/DAO/DAO.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThuTienDAO.cs" />
+    <Compile Include="TiepNhanDAO.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DTO\DTO.csproj">
