--- a/Test/DTO/DTO.csproj
+++ b/Test/DTO/DTO.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThuTienDTO.cs" />
+    <Compile Include="TiepNhanDTO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
