--- a/Test/Test/GUI.csproj
+++ b/Test/Test/GUI.csproj
@@ -55,6 +55,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="LapPhieuTiepNhan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LapPhieuTiepNhan.Designer.cs">
+      <DependentUpon>LapPhieuTiepNhan.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="LapPhieuThuTien.resx">
       <DependentUpon>LapPhieuThuTien.cs</DependentUpon>
     </EmbeddedResource>
@@ -67,6 +73,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="LapPhieuTiepNhan.resx">
+      <DependentUpon>LapPhieuTiepNhan.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
