--- a/Test/ClassLibrary1/BUS.csproj
+++ b/Test/ClassLibrary1/BUS.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HieuXeBUS.cs" />
+    <Compile Include="PhuTungBUS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThuTienBUS.cs" />
     <Compile Include="TiepNhanBUS.cs" />
