--- a/Test/Test/GUI.csproj
+++ b/Test/Test/GUI.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LapPhieuSuaChua.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LapPhieuSuaChua.Designer.cs">
+      <DependentUpon>LapPhieuSuaChua.cs</DependentUpon>
+    </Compile>
     <Compile Include="LapPhieuThuTien.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,6 +67,9 @@
     <Compile Include="LapPhieuTiepNhan.Designer.cs">
       <DependentUpon>LapPhieuTiepNhan.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="LapPhieuSuaChua.resx">
+      <DependentUpon>LapPhieuSuaChua.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LapPhieuThuTien.resx">
       <DependentUpon>LapPhieuThuTien.cs</DependentUpon>
     </EmbeddedResource>
