--- a/Test/DAO/DAO.csproj
+++ b/Test/DAO/DAO.csproj
@@ -45,7 +45,9 @@
     <Compile Include="HieuXeDAO.cs" />
     <Compile Include="PhuTungDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SuaChuaDAO.cs" />
     <Compile Include="ThuTienDAO.cs" />
+    <Compile Include="TienCongDAO.cs" />
     <Compile Include="TiepNhanDAO.cs" />
   </ItemGroup>
   <ItemGroup>
