--- a/Test/DTO/DTO.csproj
+++ b/Test/DTO/DTO.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DemDTO.cs" />
     <Compile Include="HieuXeDTO.cs" />
     <Compile Include="PhuTungDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
